// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin err.es5.js: err.es5.js 1`] = `
"
function f() {
  console.log(1);
  throw new Error('errrrrror');
  console.log(2);
}

f();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

function f() {
  try {
    console.log(1);
    throw new Error('errrrrror');
    console.log(2);
  } catch (err) {
    console.log(err);
    throw err;
  }
}

f();
"
`;

exports[`plugin err.esNext.js: err.esNext.js 1`] = `
"
function f() {
  console.log(1);
  throw new Error('errrrrror');
  console.log(2);
}

f();

      ↓ ↓ ↓ ↓ ↓ ↓

function f() {
  try {
    console.log(1);
    throw new Error('errrrrror');
    console.log(2);
  } catch (err) {
    console.log(err);
    throw err;
  }
}

f();
"
`;
